# vcf2exchange

./: README.md  pyproject.toml  vcf2exchange.py  vcf2exchangeCSV.py  vcf2ics.py
